# quickcap_request_automation

./: .env.example  .gitignore  README.md  config.py  import_requests.py  main.py  pyproject.toml  quickcap.bat  quickcap_pages.py  requirements.txt  run_webapp.py  utils.py
.claude/: settings.json
demo/: detail_1001.html  detail_1002.html  detail_1003.html  list.html
samples/: sample_pending_requests.json
webapp/: app.py  store.py
webapp/data/: groups.json  org_users.json  organizations.json
webapp/static/: app.js  style.css
webapp/templates/: base.html  detail.html  group_popup.html  list.html  org_popup.html
